fix: Form controls border meet color contrast with container background (#1217)

--- a/src/pie-chart/styles.scss
+++ b/src/pie-chart/styles.scss
@@ -108,7 +108,7 @@
 
   /* stylelint-disable-next-line selector-max-type */
   > line {
-    stroke: awsui.$color-border-control-default;
+    stroke: awsui.$color-stroke-chart-line;
     stroke-width: awsui.$border-divider-section-width;
   }
 
